# OpenGL-with-Rust

./: Cargo.toml  README.md
res/: fragment.glsl  vertex.glsl
res/shaders/: color.frag
src/: camera.rs  main.rs  shader.rs  texture.rs
