[package]
name = "learn-opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.48.0" # 0.49.0 is broken on X11 due to merging in broken code! funny!
glow = "0.11.2"
image = "0.24.5"
thiserror = "1.0.38"
